--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,10 +13,14 @@
 - name: create drupal-solr cores
   command: creates="{{ drupal_solr4_home }}/cores/{{ item }}" chdir="{{ drupal_solr4_home }}/cores"  cp -r core0 {{ item }}
   with_items: "{{ drupal_solr4_cores }}"
+  tags:
+    - add-drupal-solr-core
 
 - name: configure drupal-solr cores
   replace: dest="{{ drupal_solr4_home }}/cores/{{ item }}/core.properties" regexp="core0" replace="{{ item }}"
   with_items: "{{ drupal_solr4_cores }}"
+  tags:
+    - add-drupal-solr-core
 
 - name: create the drupal-solr account
   user: name="solr" comment="Apache Solr daemon"
